# kuka_ws

./: README.md
youbot_control/: CMakeLists.txt  package.xml  youbot_hw_plugin.xml
youbot_control/config/: controllers (copy).yaml  controllers.yaml  controllers_working.yaml
youbot_control/include/youbot_control/: youbot_base_interface.hpp  youbot_interface.hpp
youbot_control/launch/: action_mux.py  arm_trajectory_test.py  base_trajectory_test.py  youbot_control.launch
youbot_control/src/: youbot_base_interface.cpp  youbot_interface.cpp  youbot_manipulator_interface.cpp
youbot_control/test/: follow_joint_trajectory_test.py  mux_trajectory_test.py
youbot_control_combi/: CMakeLists.txt  package.xml  youbot_hw_plugin.xml
youbot_control_combi/config/: hardware.yaml
youbot_control_combi/include/youbot_control_combi/: youbot_manipulator_interface.hpp
youbot_control_combi/launch/: youbot_control_combi.launch
youbot_control_combi/src/: youbot_base_interface.cpp  youbot_control_node.cpp  youbot_manipulator_interface.cpp
youbot_control_combi/test/: arm_trajectory_test.py  base_trajectory_test.py  mux_trajectory_test.py
youbot_description/robots/: youbot (copy).urdf  youbot.urdf
youbot_description/urdf/youbot_gripper/: gripper.urdf.xacro
youbot_driver/: CMakeLists.txt
youbot_driver/tools/diagnostics_tool/: CMakeLists.txt
youbot_driver/tools/joypad_control/: Required_Packages
youbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
youbot_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits (copy).yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  youbot.srdf
youbot_moveit/include/interactivity/: imarker.h
youbot_moveit/launch/: demo.launch  main.launch  moveit.rviz  moveit2.rviz  moveit3.rviz  moveit4.rviz  moveit_interactive_example.rviz  moveit_rviz.launch  moveit_rviz_visual_tools.rviz  planning_context.launch  plot.launch  sensor_manager.launch.xml  setup_assistant.launch  youbot_moveit_controller_manager.launch.xml
youbot_moveit/measurements/: rqt_multiplot.xml
youbot_moveit/src/: ee_pose_publisher.py  youbot_cartesian_path_constrain.cpp  youbot_cartesian_path_constraint.cpp  youbot_cartesian_path_constraint_send_direct_to_controller.cpp  youbot_interactive_robot (copy).cpp  youbot_joint_constraint.cpp  youbot_orientation_constraint.cpp  youbot_overconstrained_problem.cpp  youbot_position_constraint.cpp  youbot_rectangle.cpp
youbot_moveit/src/archiv/: interactivity_tutorial.cpp  youbot_interactive_robot.cpp
youbot_moveit/src/archiv/interactivity/: imarker.cpp
youbot_moveit/src/interactivity/: interactive_robot.cpp  pose_string.cpp
youbot_moveit/test/: moveit_interface_test.py  moveit_interface_test2.py
youbot_simulation/youbot_gazebo_robot/launch/: youbot.launch
youbot_simulation/youbot_gazebo_worlds/launch/: empty_world.launch  robocup_at_work_2012.launch
youbot_test/: CMakeLists.txt  package.xml
youbot_test/launch/: arm_command.py  arm_follow_trajectory_classic_zero.py  arm_mirrored_jointts.py  inverse_kinematic_position.py
